sumo/tests/dfrouter/errors/detector_files/false_detectors_file2/options.dfrouter
--net-file=input_messstrecke.net.xml --detector-files=input_messstrecke.det.xml;xxx.det.xml --detectors-output detectors_def.det.xml

